cmake_minimum_required(VERSION 2.8.4)
project(MyCode C)

set(CMAKE_C_STANDARD 99)

add_executable(MyCode main.c)
# 第5章 数组和字符串
add_executable(5_2_1 chapter05array/5_2_1_one_dim_array.c)
add_executable(5_2_2 chapter05array/5_2_2_one_dim_array_init.c)
add_executable(5_2_3 chapter05array/5_2_3_one_dim_array_name.c)
add_executable(5_2_4 chapter05array/5_2_4_max_of_one_dim_array.c)
add_executable(5_2_4_2 chapter05array/5_2_4_reverse_one_dim_array.c)
add_executable(5_2_4_3 chapter05array/5_2_4_bubble_sort_one_dim_array.c)
add_executable(5_3_1 chapter05array/5_3_1_two_dim_array.c)
add_executable(5_3_2 chapter05array/5_3_2_two_dim_array_init.c)
add_executable(5_3_3 chapter05array/5_3_3_two_dim_array_name.c)
add_executable(5_3_4 chapter05array/5_3_4_two_dim_array_example.c)
add_executable(5_5_1 chapter05array/5_5_1_arr_and_str.c)
add_executable(5_5_2 chapter05array/5_5_2_arr_str_init.c)
add_executable(5_5_3 chapter05array/5_5_3_arr_str_input_output.c)
add_executable(5_5_4 chapter05array/5_5_4_arr_str_append.c)
add_executable(5_5_5 chapter05array/5_5_5_rand_and_srand.c)
add_executable(5_5_6_1 chapter05array/5_5_6_1_gets.c)
add_executable(5_5_6_2 chapter05array/5_5_6_2_fgets.c)
add_executable(5_5_6_3 chapter05array/5_5_6_3_puts.c)
add_executable(5_5_6_4 chapter05array/5_5_6_4_fputs.c)
add_executable(5_5_6_5 chapter05array/5_5_6_5_strlen.c)
add_executable(5_5_6_6 chapter05array/5_5_6_6_strcpy.c)
add_executable(5_5_6_7 chapter05array/5_5_6_7_strncpy.c)
add_executable(5_5_6_8 chapter05array/5_5_6_8_strcat.c)
add_executable(5_5_6_9 chapter05array/5_5_6_9_strncat.c)
add_executable(5_5_6_10 chapter05array/5_5_6_10_strcmp.c)
add_executable(5_5_6_11 chapter05array/5_5_6_11_strncmp.c)
add_executable(5_5_6_12 chapter05array/5_5_6_12_sprintf.c)
add_executable(5_5_6_13 chapter05array/5_5_6_13_sscanf.c)
add_executable(5_5_6_14 chapter05array/5_5_6_14_strchr.c)
add_executable(5_5_6_15 chapter05array/5_5_6_15_strstr.c)
add_executable(5_5_6_16 chapter05array/5_5_6_16_strtok.c)
add_executable(5_5_6_17 chapter05array/5_5_6_17_atox.c)